class Color:
    WHITE = 1
    BLACK = 2
    