class MoveDirection:
    UP = 1
    DOWN = 1
