class PieceType:
    PAWN = 0