@startuml
left to right direction
hide empty members
title Диаграмма классов

class Board {
  +squares: Squares {readOnly}
  +white_pieces: Piece[]
  +black_pieces: Piece[]
  +white_king: King
  +black_king: King
  +clear()
  +put_black_bishop_at(place): Piece
  +put_black_king_at(place): Piece
  +put_black_knight_at(place): Piece
  +put_black_pawn_at(place): Piece
  +put_black_queen_at(place): Piece
  +put_black_rook_at(place): Piece
  +put_white_bishop_at(place): Piece
  +put_white_king_at(place): Piece
  +put_white_knight_at(place): Piece
  +put_white_pawn_at(place): Piece
  +put_white_queen_at(place): Piece
  +put_white_rook_at(place): Piece
}
Board "1" *-- "32" Piece
Board "1" *-- "1" Squares
Squares "1" *-- "64" Square
note top of Squares
  Squares - это объект-коллекция, нужен
  для упрощения доступа к полям доски.
end note

enum Color {
  {static} + WHITE
  {static} + BLACK
}

class Game {
  +played_moves: Move[] {readOnly}
  +turn: Color {readOnly}
  +add_move(move: Move)
  +get_last_move(): Move
  +is_move_legal(move: Move): bool
  +is_checked(): bool
  +is_checkmated(): bool
  +is_draw(): bool
  +is_over(): bool
  +final_result(): str
}
Game --> Color
Game "1" *-- "1" Board
Game "1" *-- "n" Move

class Move {
  -start_square: Square
  -end_square: Square
  -piece: Piece
  -captured_piece: Piece
  -promote_to: PieceType
  +notation {readOnly}
  +long_notation {readOnly}
  +iccf_notation {readOnly}
  +do()
  +undo()
  +is_castling(): bool
  +is_kingside_castling(): bool
  +is_queenside_castling(): bool
}
Move --> Piece
Move --> PieceType
Move --> Square

enum MoveDirection {
  {static} + UP
  {static} + DOWN
}

class Pawn {
  +double_step: bool {readOnly}
  +move_direction: MoveDirection {readOnly}
  +promoted: bool {readOnly}
  +promote_to(piece_type: PieceType)
}
Pawn --> MoveDirection
Pawn --> PieceType

abstract class Piece {
  -board: Board
  +color: Color {readOnly}
  +moved: bool {readOnly}
  +place_at: Square {readOnly}
  #former_squares: Square[]
  -promoted_from: Piece
  {abstract} +attack_squares(): Square[]
  {abstract} +capture_free_moves(): Square[]
  {abstract} +captures(): Square[]
  {abstract} +valid_moves(): Square[]
  +is_black(): bool
  +is_white(): bool
  +is_bishop(): bool
  +is_king(): bool
  +is_knight(): bool
  +is_pawn(): bool
  +is_queen(): bool
  +is_rook(): bool
  +is_offboard(): bool
  +is_onboard(): bool
  +move_back()
  +move_to(new_place)
  +put_at(place)
  +remove()
}
Piece --> Color
Piece <|.. Bishop
Piece <|.. King
Piece <|.. Knight
Piece <|.. Queen
Piece <|.. Rook
Piece <|.. Pawn

enum PieceType {
  {static} +BISHOP
  {static} +KING
  {static} +KNIGHT
  {static} +PAWN
  {static} +QUEEN
  {static} +ROOK
}

class Square {
  -all_squares: Squares
  +color: Color {readOnly}
  +file: str {readOnly}
  +rank: str {readOnly}
  +file_index: int {readOnly}
  +rank_index: int {readOnly}
  +piece: Piece
  +down: Square {readOnly}
  +left: Square {readOnly}
  +right: Square {readOnly}
  +up: Square {readOnly}
  +is_empty(): bool
  +is_downmost(): bool
  +is_leftmost(): bool
  +is_rightmost(): bool
  +is_topmost(): bool
  +is_on_board(): bool
  +is_off_board(): bool
}
Square --> Color
Square -- Piece
@enduml
